--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mantine/form": "^6.0.1",
     "@mantine/hooks": "^6.0.1",
     "@mantine/next": "^6.0.1",
+    "@mantine/notifications": "^6.0.6",
     "@tanstack/react-query": "^4.28.0",
     "@types/node": "18.15.0",
     "@types/react": "18.0.28",
