--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mantine/hooks": "^6.0.1",
     "@mantine/next": "^6.0.1",
     "@mantine/notifications": "^6.0.6",
+    "@tabler/icons-react": "^2.14.0",
     "@tanstack/react-query": "^4.28.0",
     "@types/node": "18.15.0",
     "@types/react": "18.0.28",
